--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "repository": "https://github.com/EdersonDav/chanel-stream-API",
   "author": "EdersonDav",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon --watch 'src/' --exec 'ts-node src/index.ts' -e ts"
+  },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.2"
   },
@@ -17,7 +21,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
 }
