--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "socket.io": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.1",
+    "@types/socket.io": "^3.0.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
