--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.2",
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.1",
     "@types/socket.io": "^3.0.2",
