--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "author": "EdersonDav",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --watch 'src/' --exec 'ts-node src/index.ts' -e ts"
+    "start": "ts-node-dev --transpile-only src/index.ts",
+    "typeorm": "ts-node-dev node_modules/.bin/typeorm"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -14,13 +15,18 @@
     "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.2",
-    "socket.io": "^4.4.0"
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.4.0",
+    "typeorm": "^0.2.41",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.1",
+    "@types/node": "^17.0.5",
     "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^8.3.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -28,6 +34,7 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
 }
